--- a/assets/css/dashstyle.css
+++ b/assets/css/dashstyle.css
@@ -714,7 +714,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdd5da', end
 	-moz-box-shadow: 0 0 2px rgba(0,0,0,.47) inset;
 	box-shadow: 0 0 2px rgba(0,0,0,.47) inset;
 }
-.api_title {
+.sidebar_title {
 	background: #d1d1d1;
 	border-bottom: solid 1px #b6b6b6;
 	font-size: 14.5px;
