--- a/prototype/css/ft-styles.css
+++ b/prototype/css/ft-styles.css
@@ -46,6 +46,10 @@ body, #page-wrapper {
 	border: none !important;
 }
 
+.login-panel {
+    margin-top: 10%;
+}
+
 /* Gradients */
 .gradient-yellow {
 	background: #fcf8ea; /* Old browsers */
